backport: re PR rtl-optimization/45570 (ICE: in cfg_preds_1, at sel-sched-ir.c:4584)

Backport from mainline
        2010-10-14  Andrey Belevantsev  <abel@ispras.ru>

        PR rtl-optimization/45570
        * sel-sched-ir.c (cfg_preds_1): When walking out of the region,
        assert that we are pipelining outer loops.  Allow returning
        zero predecessors.

From-SVN: r172077